[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/map/MapLabel.gd" type="Script" id=1]

[node name="MapLabel" type="PanelContainer"]
margin_right = 400.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="Label" type="RichTextLabel" parent="."]
margin_left = 12.0
margin_top = 127.0
margin_right = 388.0
margin_bottom = 172.0
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]New Label"
text = "New Label"
fit_content_height = true

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 12.0
margin_top = 12.0
margin_right = 388.0
margin_bottom = 288.0

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
